@@ -1,0 +1,3 @@
+defmodule Pxblog.UserView do
+  use Pxblog.Web, :view
+end
