@@ -1,8 +1,10 @@
 * Change log
 **	[Unrealeased] [2016-11-24]
 *** Changed
+- Added user path to the router.
 - Added the post path to the router.
 ***	Added
+- Generated users
 - Created posts using phoenix.gen.html
 ** [Unrealeased] [2016-11-11]
 *** Changed
